<resources>
    <string name="app_name">AA生活记账</string>
    <string name="app_version">6.0.3</string>
    <string name="app_client">web</string>
    <string name="app_description">AA生活记账是一款记录收入、支出、借还消费，使用简单的手机记账APP。包括类别排行、次数排行、单价排行、日期排行、区间统计、推荐统计，比较分析、收支分析、借还分析、趣味统计，和区间记账、专题记账、语音记账、数据同步、数据导出、云备份，我的钱包、钱包转账、转账明细、类别预警、搜索等实用功能。</string>
    <string name="app_keywords">简单记账，AA生活记账。</string>
    <string name="app_website">www.fxlweb.com</string>
    <string name="app_author">2018</string>
    <string name="app_thanks">鸣谢：raindropmemory（图标）\n源码：https://github.com/pyfxl/AALifeApp</string>
    <string name="action_abouts">关于</string>
    <string name="action_settings">设置</string>
    <string name="action_exits">退出</string>
    <string name="title_activity_main">AA生活记账</string>
    <string name="title_activity_day">每日消费</string>
    <string name="title_activity_day_detail">消费明细</string>
    <string name="title_activity_month">每月消费</string>
    <string name="title_activity_add">添加消费</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_register">用户注册</string>
    <string name="title_activity_category_edit">类别管理</string>
    <string name="title_activity_rank_cat_detail">类别明细</string>
    <string name="title_activity_rank_count_detail">次数明细</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_synchronize">高级</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_abouts">关于</string>
    <string name="title_activity_analyze_compare_detail">比较明细</string>
    <string name="title_activity_analyze_jiehuan_detail">借还明细</string>
    <string name="title_activity_rank">消费排行</string>
    <string name="title_activity_zhuanti">用户专题</string>
    <string name="title_activity_zhuanti_show">专题显示</string>
    <string name="title_activity_zhuanzhang_detail">转账明细</string>
    <string name="title_activity_card">钱包管理</string>
    <string name="title_activity_card_detail">钱包明细</string>
    <string name="title_activity_analyze">消费分析</string>
    <string name="title_activity_user_edit">修改资料</string>
    <string name="txt_title_home">AA生活记账</string>
    <string name="txt_title_total">消费统计</string>
    <string name="txt_title_add">添加</string>
    <string name="txt_title_back">返回</string>
    <string name="txt_title_date">日期</string>
    <string name="txt_title_search">搜索</string>
    <string name="txt_title_refresh">刷新</string>
    <string name="txt_title_sync">同步</string>
    <string name="txt_title_aboutus">关于</string>
    <string name="txt_title_setting">设置</string>
    <string name="txt_title_catrate">预算率</string>
    <string name="txt_tab_day">每日消费</string>
    <string name="txt_tab_day_detail">消费明细</string>
    <string name="txt_tab_month">每月消费</string>
    <string name="txt_tab_rank">消费排行</string>
    <string name="txt_tab_analyze">消费分析</string>
    <string name="txt_tab_analyzecompare">比较分析</string>
    <string name="txt_tab_analyzecomparedetail">比较明细</string>
    <string name="txt_tab_analyzejiehuandetail">借还明细</string>
    <string name="txt_tab_analyzeshouzhi">收支分析</string>
    <string name="txt_tab_analyzejiehuan">借还分析</string>
    <string name="txt_tab_analyzetongji">趣味统计</string>
    <string name="txt_tab_add">添加消费</string>
    <string name="txt_tab_edit">编辑消费</string>
    <string name="txt_tab_login">用户登录</string>
    <string name="txt_tab_register">用户注册</string>
    <string name="txt_tab_catedit">类别管理</string>
    <string name="txt_tab_rankcat">类别排行</string>
    <string name="txt_tab_rankcount">次数排行</string>
    <string name="txt_tab_rankprice">单价排行</string>
    <string name="txt_tab_rankdate">日期排行</string>
    <string name="txt_tab_rankregion">区间统计</string>
    <string name="txt_tab_zhuanti">用户专题</string>
    <string name="txt_tab_zhuanti_show">专题显示</string>
    <string name="txt_tab_zhuanzhang_detail">转账明细</string>
    <string name="txt_tab_card">钱包管理</string>
    <string name="txt_tab_card_detail">明细</string>
    <string name="txt_tab_zhuanti_name">请输入专题名称</string>
    <string name="txt_tab_useredit">修改资料</string>
    <string name="txt_tab_rankcatdetail">类别明细</string>
    <string name="txt_tab_rankcountdetail">次数明细</string>
    <string name="txt_tab_rankrecommend">推荐统计</string>
    <string name="txt_tab_settings">设置</string>
    <string name="txt_tab_search">搜索</string>
    <string name="txt_tab_synchronize">高级</string>
    <string name="txt_tab_abouts">关于</string>
    <string name="txt_lab_qzone">分享到空间</string>
    <string name="txt_lab_qq">分享到QQ</string>
    <string name="txt_lab_qun">官方QQ群</string>
    <string name="txt_home_syncat">同步于：</string>
    <string name="txt_home_syncing">数据同步中…</string>
    <string name="txt_home_hassync">有未同步的数据。</string>
    <string name="txt_home_haslocalsync">有未同步的本地数据。</string>
    <string name="txt_home_haswebsync">有未同步的网络数据。</string>
    <string name="txt_home_nosync">没有要同步的数据。</string>
    <string name="txt_home_loginsync">请登录后再同步数据。</string>
    <string name="txt_home_cloudsync">请登录后再上传下载数据。</string>
    <string name="txt_home_syncexit">数据同步中不能退出。</string>
    <string name="txt_home_syncerror">数据同步失败！请重试。</string>
    <string name="txt_home_allowsync">请在设置中允许同步数据到网络。</string>
    <string name="txt_home_neterror">没有打开网络连接！</string>
    <string name="txt_home_shouru">收入</string>
    <string name="txt_home_zhichu">支出</string>
    <string name="txt_home_jiecun">结存</string>
    <string name="txt_home_usermoney">￥ 0</string>
    <string name="txt_home_radioall">全部</string>
    <string name="txt_home_radioyear">今年</string>
    <string name="txt_home_radiomonth">本月</string>
    <string name="txt_home_radioday">今日</string>
    <string name="txt_restore_title">备份数据</string>
    <string name="txt_restore_text">退出时会自动备份数据，您也可以手动备份然后上传到云端，或者从云端下载然后在本地恢复。</string>
    <string name="txt_restore_success">数据恢复成功。</string>
    <string name="txt_restore_error">数据恢复失败！</string>
    <string name="txt_restore_nodata">没有要恢复的数据。</string>
    <string name="txt_restore_note">请确认是否要恢复备份。\n</string>
    <string name="txt_restore_button">恢复</string>
    <string name="txt_backup_button">备份</string>
    <string name="txt_backup_success">数据备份成功，您还可以上传到云端。</string>
    <string name="txt_backup_error">数据备份失败！</string>
    <string name="txt_backup_isbackup">请您先备份数据。</string>
    <string name="txt_data_title">数据导出</string>
    <string name="txt_data_text">选择日期区间，将数据导出成文本文件。\n存放在 /sdcard/aalife 目录下。</string>
    <string name="txt_data_export">导出</string>
    <string name="txt_data_to"> ~ </string>
    <string name="txt_data_success">数据导出成功。%1$s</string>
    <string name="txt_data_error">数据导出失败！</string>
    <string name="txt_cloud_title">云备份</string>
    <string name="txt_cloud_text">请您先备份数据，然后上传到云端，或者从云端下载备份文件，然后在本地恢复数据。</string>
    <string name="txt_cloud_up">上传云</string>
    <string name="txt_cloud_down">云下载</string>
    <string name="txt_cloud_up_success">云备份上传成功。</string>
    <string name="txt_cloud_up_error">云备份上传失败，请检查是否有备份！</string>
    <string name="txt_cloud_down_success">云备份下载成功，您可以恢复数据了。</string>
    <string name="txt_cloud_down_error">云备份下载失败！</string>
    <string name="txt_sync_user">用户状态</string>
    <string name="txt_sync_user_logout">[退出登录]</string>
    <string name="txt_sync_user_text">用户未登录。您可以本地记账，但不能同步数据到网络，数据只保存在本地。</string>
    <string name="txt_sync_user_login">  已登录。您可以同步数据到网络，数据永不丢失。</string>
    <string name="txt_sync_user_honor">** 您记账已有 %1$d 天，共添加消费 %2$d 笔。</string>
    <string name="txt_sync_user_bound">绑定QQ</string>
    <string name="txt_sync_user_bound_ok">绑定成功。</string>
    <string name="txt_sync_user_bound_error">绑定失败！</string>
    <string name="txt_sync_user_bound_ready">绑定失败！此QQ已绑定其它账号。</string>
    <string name="txt_sync_title">数据同步</string>
    <string name="txt_sync_button">开始同步</string>
    <string name="txt_sync_cancel">[取消同步]</string>
    <string name="txt_sync_cancelnote">数据同步已取消。</string>
    <string name="txt_sync_autosync_ok">自动同步成功。</string>
    <string name="txt_sync_autosync_error">自动同步失败！</string>
    <string name="txt_search">消费搜索</string>
    <string name="txt_search_keyempty">搜索关键字不能为空。</string>
    <string name="txt_day_select">选择</string>
    <string name="txt_day_itemtype">类</string>
    <string name="txt_day_itemtypebig">分类</string>
    <string name="txt_day_regionname">固</string>
    <string name="txt_day_zhuanti">专</string>
    <string name="txt_day_remark">备</string>
    <string name="txt_day_itemname">商品名称</string>
    <string name="txt_day_itemprice">价格</string>
    <string name="txt_day_recommend">推荐</string>
    <string name="txt_day_id">编号</string>
    <string name="txt_day_itembuydate">日期</string>
    <string name="txt_day_totalprice">总价格</string>
    <string name="txt_cat_id">编号</string>
    <string name="txt_cat_name">类别名称</string>
    <string name="txt_cat_price">预算</string>
    <string name="txt_cat_rate">范围</string>
    <string name="txt_cat_operate">操作</string>
    <string name="txt_cat_save">保存</string>
    <string name="txt_month_date">日期</string>
    <string name="txt_month_price">总价格</string>
    <string name="txt_month_zhichuprice">总支出</string>
    <string name="txt_month_shouruprice">总收入</string>
    <string name="txt_month_jiecunprice">结存</string>
    <string name="txt_month_total">总计</string>
    <string name="txt_month_shou">收</string>
    <string name="txt_month_zhi">支</string>
    <string name="txt_month_cun">存</string>
    <string name="txt_rank_id">排名</string>
    <string name="txt_rank_den">预警</string>
    <string name="txt_rank_denrate">预警范围计算：先由【预算-预算x(预算率/100)】得出值a，再根据预算加减值a【预算-值a ~ 预算+值a】得出范围。\n</string>
    <string name="txt_rank_catname">类别</string>
    <string name="txt_rank_catprice">预算</string>
    <string name="txt_rank_select">选择</string>
    <string name="txt_rank_itemtype">分类</string>
    <string name="txt_rank_itemname">商品名称</string>
    <string name="txt_rank_region">区间</string>
    <string name="txt_rank_itembuydate">日期</string>
    <string name="txt_rank_count">次数</string>
    <string name="txt_rank_shouprice">总收入</string>
    <string name="txt_rank_zhiprice">总支出</string>
    <string name="txt_rank_price">总价格</string>
    <string name="txt_rank_itemprice">价格</string>
    <string name="txt_rank_catnote">预警说明</string>
    <string name="txt_rank_catsetting">预算率设置</string>
    <string name="txt_zhuanti">用户专题</string>
    <string name="txt_zhuanti_search">专题日期</string>
    <string name="txt_zhuanti_text">用于记录相关专题全部消费，比如小孩专题、学习专题、汽车专题。</string>
    <string name="txt_zhuanti_button">专题列表</string>
    <string name="txt_zhuanti_name">专题名称</string>
    <string name="txt_zhuanti_date">专题区间</string>
    <string name="txt_zhuanti_shouru">总收入</string>
    <string name="txt_zhuanti_zhichu">总支出</string>
    <string name="txt_zhuanti_jiecun">结存</string>
    <string name="txt_zhuanti_message">请选择您的操作：\n</string>
    <string name="txt_card_id">编号</string>
    <string name="txt_card_detail">明细</string>
    <string name="txt_card_name">名称</string>
    <string name="txt_card_money">余额</string>
    <string name="txt_empty"> </string>
    <string name="txt_user_newuser">新用户</string>
    <string name="txt_user_edit">修    改</string>
    <string name="txt_user_userimage">头像</string>
    <string name="txt_calc_0">0</string>
    <string name="txt_calc_1">1</string>
    <string name="txt_calc_2">2</string>
    <string name="txt_calc_3">3</string>
    <string name="txt_calc_4">4</string>
    <string name="txt_calc_5">5</string>
    <string name="txt_calc_6">6</string>
    <string name="txt_calc_7">7</string>
    <string name="txt_calc_8">8</string>
    <string name="txt_calc_9">9</string>
    <string name="txt_calc_ok">√</string>
    <string name="txt_calc_jia">+</string>
    <string name="txt_calc_jian">-</string>
    <string name="txt_calc_chen">×</string>
    <string name="txt_calc_chu">÷</string>
    <string name="txt_calc_den">=</string>
    <string name="txt_calc_dian">.</string>
    <string name="txt_calc_clear">c</string>
    <string name="txt_calc_back">←</string>
</resources>